// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkListItem Snapshots All 1`] = `
<ul
  className="sc-AykKF UQtjO"
>
  <li
    className="sc-AykKD cOQQmB className"
  >
    <a
      className="sc-AykKE jcvoKt"
      href="/"
      onClick={[Function]}
    >
      One ListElement
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
  <li
    className="sc-AykKD cOQQmB className"
  >
    <a
      className="sc-AykKE jcvoKt"
      href="/"
      onClick={[Function]}
    >
      Another List Element
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`LinkListItem Snapshots No props 1`] = `
<ul
  className="sc-AykKF UQtjO"
>
  <li
    className="sc-AykKD cOQQmB"
  >
    <a
      className="sc-AykKE jcvoKt"
    >
      One ListElement
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
  <li
    className="sc-AykKD cOQQmB"
  >
    <a
      className="sc-AykKE jcvoKt"
    >
      Another List Element
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`LinkListItem Snapshots className 1`] = `
<ul
  className="sc-AykKF UQtjO"
>
  <li
    className="sc-AykKD cOQQmB className"
  >
    <a
      className="sc-AykKE jcvoKt"
    >
      One ListElement
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
  <li
    className="sc-AykKD cOQQmB className"
  >
    <a
      className="sc-AykKE jcvoKt"
    >
      Another List Element
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`LinkListItem Snapshots onClick 1`] = `
<ul
  className="sc-AykKF UQtjO"
>
  <li
    className="sc-AykKD cOQQmB"
  >
    <a
      className="sc-AykKE jcvoKt"
      onClick={[Function]}
    >
      One ListElement
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
  <li
    className="sc-AykKD cOQQmB"
  >
    <a
      className="sc-AykKE jcvoKt"
      onClick={[Function]}
    >
      Another List Element
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`LinkListItem Snapshots to 1`] = `
<ul
  className="sc-AykKF UQtjO"
>
  <li
    className="sc-AykKD cOQQmB"
  >
    <a
      className="sc-AykKE jcvoKt"
      href="/"
    >
      One ListElement
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
  <li
    className="sc-AykKD cOQQmB"
  >
    <a
      className="sc-AykKE jcvoKt"
      href="/"
    >
      Another List Element
       
      <svg
        className="sc-AykKC corfaz"
        height="12"
        viewBox="0 0 20 33"
        width="7"
      >
        <path
          d="M12.15 16.5L.87 4.81c-.5-.52-.5-1.35.01-1.87L2.9.9a1.3 1.3 0 0 1 1.86 0l14.36 14.67a1.36 1.36 0 0 1 0 1.88L4.76 32.1a1.3 1.3 0 0 1-1.86.01L.88 30.06c-.5-.52-.5-1.34 0-1.87L12.14 16.5h.01z"
        />
      </svg>
    </a>
  </li>
</ul>
`;
